finalized new format for racks 10 and 11

--- a/templates/rack10.html
+++ b/templates/rack10.html
@@ -10,14 +10,14 @@
                 <th width="25%">Material Type</th>
                 <th width="65%">Notes</th>
             </tr>
-            <tr><td><a href="/edit/{{ rack[109][0] }}"><span style="font-weight:bold">{{ rack[109][1] }}</span></a></td><td> {{ rack[109][3] }}</td><td> {{ rack[109][5] }} </td></tr>
-            <tr><td><a href="/edit/{{ rack[108][0] }}"><span style="font-weight:bold">{{ rack[108][1] }}</span></a></td><td> {{ rack[108][3] }}</td><td> {{ rack[108][5] }} </td></tr>
-            <tr><td><a href="/edit/{{ rack[107][0] }}"><span style="font-weight:bold">{{ rack[107][1] }}</span></a></td><td> {{ rack[107][3] }}</td><td> {{ rack[107][5] }} </td></tr>
-            <tr><td><a href="/edit/{{ rack[106][0] }}"><span style="font-weight:bold">{{ rack[106][1] }}</span></a></td><td> {{ rack[106][3] }}</td><td> {{ rack[106][5] }} </td></tr>
-            <tr><td><a href="/edit/{{ rack[105][0] }}"><span style="font-weight:bold">{{ rack[105][1] }}</span></a></td><td> {{ rack[105][3] }}</td><td> {{ rack[105][5] }} </td></tr>
-            <tr><td><a href="/edit/{{ rack[104][0] }}"><span style="font-weight:bold">{{ rack[104][1] }}</span></a></td><td> {{ rack[104][3] }}</td><td> {{ rack[104][5] }} </td></tr>
-            <tr><td><a href="/edit/{{ rack[103][0] }}"><span style="font-weight:bold">{{ rack[103][1] }}</span></a></td><td> {{ rack[103][3] }}</td><td> {{ rack[103][5] }} </td></tr>
-            <tr><td><a href="/edit/{{ rack[102][0] }}"><span style="font-weight:bold">{{ rack[102][1] }}</span></a></td><td> {{ rack[102][3] }}</td><td> {{ rack[102][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[109][0] }}"><span style="font-weight:bold">{{ rack[109][1] }}</span></a></td><td> {{ rack[109][3] }}</td><td><pre style="font-size:16px; font-family: sans-serif; margin:0; line-height:18px;"> {{ rack[109][8] }} </pre></td></tr>
+            <tr><td><a href="/edit/{{ rack[108][0] }}"><span style="font-weight:bold">{{ rack[108][1] }}</span></a></td><td> {{ rack[108][3] }}</td><td><pre style="font-size:16px; font-family: sans-serif; margin:0; line-height:18px;"> {{ rack[108][8] }} </pre></td></tr>
+            <tr><td><a href="/edit/{{ rack[107][0] }}"><span style="font-weight:bold">{{ rack[107][1] }}</span></a></td><td> {{ rack[107][3] }}</td><td><pre style="font-size:16px; font-family: sans-serif; margin:0; line-height:18px;"> {{ rack[107][8] }} </pre></td></tr>
+            <tr><td><a href="/edit/{{ rack[106][0] }}"><span style="font-weight:bold">{{ rack[106][1] }}</span></a></td><td> {{ rack[106][3] }}</td><td><pre style="font-size:16px; font-family: sans-serif; margin:0; line-height:18px;"> {{ rack[106][8] }} </pre></td></tr>
+            <tr><td><a href="/edit/{{ rack[105][0] }}"><span style="font-weight:bold">{{ rack[105][1] }}</span></a></td><td> {{ rack[105][3] }}</td><td><pre style="font-size:16px; font-family: sans-serif; margin:0; line-height:18px;"> {{ rack[105][8] }} </pre></td></tr>
+            <tr><td><a href="/edit/{{ rack[104][0] }}"><span style="font-weight:bold">{{ rack[104][1] }}</span></a></td><td> {{ rack[104][3] }}</td><td><pre style="font-size:16px; font-family:sans-serif; margin:0; line-height:18px;"> {{ rack[104][8] }} </pre></td></tr>
+            <tr><td><a href="/edit/{{ rack[103][0] }}"><span style="font-weight:bold">{{ rack[103][1] }}</span></a></td><td> {{ rack[103][3] }}</td><td><pre style="font-size:16px; font-family: sans-serif; margin:0; line-height:18px;"> {{ rack[103][8] }} </pre></td></tr>
+            <tr><td><a href="/edit/{{ rack[102][0] }}"><span style="font-weight:bold">{{ rack[102][1] }}</span></a></td><td> {{ rack[102][3] }}</td><td><pre style="font-size:16px; font-family: sans-serif; margin:0; line-height:18px;"> {{ rack[102][8] }} </pre></td></tr>
         </table>
     </body>
 {% endblock %}
