--- a/templates/rack11.html
+++ b/templates/rack11.html
@@ -10,14 +10,14 @@
                 <th width="25%">Material Type</th>
                 <th width="65%">Notes</th>
             </tr>
-            <tr><td><a href="/edit/{{ rack[117][0] }}"><span style="font-weight:bold">{{ rack[117][1] }}</span></a></td><td> {{ rack[117][3] }}</td><td> {{ rack[117][5] }} </td></tr>
-            <tr><td><a href="/edit/{{ rack[116][0] }}"><span style="font-weight:bold">{{ rack[116][1] }}</span></a></td><td> {{ rack[116][3] }}</td><td> {{ rack[116][5] }} </td></tr>
-            <tr><td><a href="/edit/{{ rack[115][0] }}"><span style="font-weight:bold">{{ rack[115][1] }}</span></a></td><td> {{ rack[115][3] }}</td><td> {{ rack[115][5] }} </td></tr>
-            <tr><td><a href="/edit/{{ rack[114][0] }}"><span style="font-weight:bold">{{ rack[114][1] }}</span></a></td><td> {{ rack[114][3] }}</td><td> {{ rack[114][5] }} </td></tr>
-            <tr><td><a href="/edit/{{ rack[113][0] }}"><span style="font-weight:bold">{{ rack[113][1] }}</span></a></td><td> {{ rack[113][3] }}</td><td> {{ rack[113][5] }} </td></tr>
-            <tr><td><a href="/edit/{{ rack[112][0] }}"><span style="font-weight:bold">{{ rack[112][1] }}</span></a></td><td> {{ rack[112][3] }}</td><td> {{ rack[112][5] }} </td></tr>
-            <tr><td><a href="/edit/{{ rack[111][0] }}"><span style="font-weight:bold">{{ rack[111][1] }}</span></a></td><td> {{ rack[111][3] }}</td><td> {{ rack[111][5] }} </td></tr>
-            <tr><td><a href="/edit/{{ rack[110][0] }}"><span style="font-weight:bold">{{ rack[110][1] }}</span></a></td><td> {{ rack[110][3] }}</td><td> {{ rack[110][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[117][0] }}"><span style="font-weight:bold">{{ rack[117][1] }}</span></a></td><td> {{ rack[117][3] }}</td><td><pre style="font-size:16px; font-family: sans-serif; margin:0; line-height:18px;"> {{ rack[109][8] }} </pre></td></tr>
+            <tr><td><a href="/edit/{{ rack[116][0] }}"><span style="font-weight:bold">{{ rack[116][1] }}</span></a></td><td> {{ rack[116][3] }}</td><td><pre style="font-size:16px; font-family: sans-serif; margin:0; line-height:18px;"> {{ rack[108][8] }} </pre></td></tr>
+            <tr><td><a href="/edit/{{ rack[115][0] }}"><span style="font-weight:bold">{{ rack[115][1] }}</span></a></td><td> {{ rack[115][3] }}</td><td><pre style="font-size:16px; font-family: sans-serif; margin:0; line-height:18px;"> {{ rack[107][8] }} </pre></td></tr>
+            <tr><td><a href="/edit/{{ rack[114][0] }}"><span style="font-weight:bold">{{ rack[114][1] }}</span></a></td><td> {{ rack[114][3] }}</td><td><pre style="font-size:16px; font-family: sans-serif; margin:0; line-height:18px;"> {{ rack[106][8] }} </pre></td></tr>
+            <tr><td><a href="/edit/{{ rack[113][0] }}"><span style="font-weight:bold">{{ rack[113][1] }}</span></a></td><td> {{ rack[113][3] }}</td><td><pre style="font-size:16px; font-family: sans-serif; margin:0; line-height:18px;"> {{ rack[105][8] }} </pre></td></tr>
+            <tr><td><a href="/edit/{{ rack[112][0] }}"><span style="font-weight:bold">{{ rack[112][1] }}</span></a></td><td> {{ rack[112][3] }}</td><td><pre style="font-size:16px; font-family:sans-serif; margin:0; line-height:18px;"> {{ rack[104][8] }} </pre></td></tr>
+            <tr><td><a href="/edit/{{ rack[111][0] }}"><span style="font-weight:bold">{{ rack[111][1] }}</span></a></td><td> {{ rack[111][3] }}</td><td><pre style="font-size:16px; font-family: sans-serif; margin:0; line-height:18px;"> {{ rack[103][8] }} </pre></td></tr>
+            <tr><td><a href="/edit/{{ rack[110][0] }}"><span style="font-weight:bold">{{ rack[110][1] }}</span></a></td><td> {{ rack[110][3] }}</td><td><pre style="font-size:16px; font-family: sans-serif; margin:0; line-height:18px;"> {{ rack[102][8] }} </pre></td></tr>
         </table>
     </body>
 {% endblock %}
