--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,16 @@
         <div id="sizeFind"></div>
         <div id="numFind"></div>
         <div id="noteFind"></div>
+
+        <div id="floor">
+            <div id="rack12">12</div>
+            <div id="col1">
+                <div id="rack02">02</div>
+                <div id="rack01">01</div>
+            </div>
+            <div id="rack03"></div>
+            <div id="rack04"></div>
+        </div>
     
     <script>
         let allMtl = [];
