--- a/templates/index.html
+++ b/templates/index.html
@@ -28,8 +28,25 @@
                 <div id="rack02">02</div>
                 <div id="rack01">01</div>
             </div>
-            <div id="rack03"></div>
-            <div id="rack04"></div>
+            <div id="rack03">03</div>
+            <div id="col2">
+                <div class="rack11">11</div>
+                <div class="inline">
+                    <div class="rack04">04</div>
+                    <div class="rack05">05</div>
+                </div>
+            </div>
+            <div id="col3">
+                <div class="rack11">10</div>
+                <div class="inline">
+                    <div class="rack04">06</div>
+                    <div class="rack05">07</div>
+                </div>
+            </div>
+            <div id="col4">
+                <div id="rack09">09</div>
+                <div id="rack08">08</div>
+            </div>
         </div>
     
     <script>
