--- a/static/style.css
+++ b/static/style.css
@@ -345,34 +345,90 @@ a.disabledLink {
     justify-content: center;
     border: 1px solid red;
     height: 600px;
-    /* font-height: 30px; */
-    /* text-align: center: */
-    /* font-weight: bold; */
     color: pink;
     font-size: 30px;
     margin: auto;
 }
 
 #rack12 {
-    width: 150px;
-    height: 600px;
+    width: 100px;
+    height: 400px;
     border: 2px solid black;
 }
 
 #col1 {
-    width: 150px;
+    width: 100px;
+    height: 400px;
     border: 1px solid green;
 }
 
 #rack01 {
-    width: 150px;
-    height: 300px;
+    width: 100px;
+    height: 200px;
     border: 2px solid black;
 }
 
 #rack02 {
-    width: 150px;
-    height: 300px;
+    width: 100px;
+    height: 200px;
+    border: 2px solid black;
+}
+
+#rack03 {
+    width: 100px;
+    height: 200px;
+    border: 2px solid black;
+}
+
+#col2 {
+    width: 400px;
+    height: 200px;
+    border: 1px solid green;
+}
+
+#col3 {
+    width: 400px;
+    height: 200px;
+    border: 1px solid green;
+}
+
+.rack11 {
+    width: 400px;
+    height: 100px;
+    border: 2px solid black;
+}
+
+.inline {
+    display: flex;
+}
+
+.rack04 {
+    width: 200px;
+    height: 100px;
+    border: 2px solid black;
+}
+
+.rack05 {
+    width: 200px;
+    height: 100px;
+    border: 2px solid black;
+}
+
+#col4 {
+    width: 100px;
+    height: 200px;
+    border: 1px solid green;
+}
+
+#rack08 {
+    width: 200px;
+    height: 100px;
+    border: 2px solid black;
+}
+
+#rack09 {
+    width: 200px;
+    height: 100px;
     border: 2px solid black;
 }
 
