--- a/templates/index.html
+++ b/templates/index.html
@@ -23,34 +23,68 @@
         <div id="noteFind"></div>
 
         <div id="floor">
-            <div id="rack12">12</div>
-            <div id="col1">
-                <div id="rack02">02</div>
-                <div id="rack01">01</div>
+            <div id="rack12">
+                <div class=textVert>12</div>
             </div>
-            <div id="rack03">03</div>
+            <div id="col1">
+                <div id="rack02">
+                    <div class=textVert>02</div>
+                </div>
+                <div id="rack01">
+                    <div class=textVert>01</div>
+                </div>
+            </div>
+            <div id="rack03">
+                <div class=textVert>03</div>
+            </div>
             <div id="col2">
-                <div id="rack11">11</div>
+                <div id="rack11">
+                    <div class=textVert>11</div>
+                </div>
                 <div class="inline">
-                    <div id="rack04">04</div>
-                    <div id="rack05">05</div>
+                    <div id="rack04">
+                        <div class=textVert>04</div>
+                    </div>
+                    <div id="rack05">
+                        <div class=textVert>05</div>
+                    </div>
                 </div>
             </div>
             <div id="col3">
-                <div id="rack11">10</div>
+                <div id="rack11"><div class=textVert>10</div></div>
                 <div class="inline">
-                    <div id="rack04">06</div>
-                    <div id="rack05">07</div>
+                    <div id="rack04">
+                        <div class=textVert>06</div>
+                    </div>
+                    <div id="rack05">
+                        <div class=textVert>07</div>
+                    </div>
                 </div>
             </div>
             <div id="col4">
-                <div id="rack09">09</div>
-                <div id="rack08">08</div>
+                <div id="rack09">
+                    <div class=textVert>09</div>
+                </div>
+                <div id="rack08">
+                    <div class=textVert>08</div>
+                </div>
             </div>
         </div>
     
     <script>
         let allMtl = [];
+        let r1 = document.getElementById('rack01');
+        let r2 = document.getElementById('rack02');
+        let r3 = document.getElementById('rack03');
+        let r4 = document.getElementById('rack04');
+        let r5 = document.getElementById('rack05');
+        let r6 = document.getElementById('rack06');
+        let r7 = document.getElementById('rack07');
+        let r8 = document.getElementById('rack08');
+        let r9 = document.getElementById('rack09');
+        let r10 = document.getElementById('rack10');
+        let r11 = document.getElementById('rack11');
+        let r12 = document.getElementById('rack12');
         $(".findBtn").on('click', function() {
             $("#rackFind").html('');
             $("#rowFind").html('');
@@ -62,26 +96,37 @@
             console.log(data)
             let rack;
             if (data[1] > 0 && data[1] <= 18) {
+                r1.setAttribute("style", "background-color: red;");
                 rack = 1;
             } else if (data[1] >= 19 && data[1] <= 36) {
+                r2.setAttribute("style", "background-color: red;");
                 rack = 2;
             } else if (data[1] >= 37 && data[1] <= 47) {
+                r3.setAttribute("style", "background-color: red;");
                 rack = 3;
             } else if (data[1] >= 48 && data[1] <= 57) {
+                r4.setAttribute("style", "background-color: red;");
                 rack = 4;
             } else if (data[1] >= 58 && data[1] <= 67) {
+                r5.setAttribute("style", "background-color: red;");
                 rack = 5;
             } else if (data[1] >= 68 && data[1] <= 77) {
+                r6.setAttribute("style", "background-color: red;");
                 rack = 6;
             } else if (data[1] >= 78 && data[1] <= 86) {
+                r7.setAttribute("style", "background-color: red;");
                 rack = 7;
             } else if (data[1] >= 87 && data[1] <= 94) {
+                r8.setAttribute("style", "background-color: red;");
                 rack = 8;
             } else if (data[1] >= 95 && data[1] <= 102) {
+                r9.setAttribute("style", "background-color: red;");
                 rack = 9;
             } else if (data[1] >= 103 && data[1] <= 110) {
+                r10.setAttribute("style", "background-color: red;");
                 rack = 10;
             } else if (data[1] >= 111 && data[1] <= 118) {
+                r11.setAttribute("style", "background-color: red;");
                 rack = 11;
             } 
             $("#rackFind").append("Rack: "+rack);
