--- a/static/style.css
+++ b/static/style.css
@@ -343,18 +343,23 @@ a.disabledLink {
     display: flex;
     width: 100%;
     justify-content: center;
-    border: 1px solid red;
     height: 400px;
-    color: pink;
     font-size: 30px;
-    margin: auto;
     margin-top: 50px;
 }
 
 #rack12 {
     width: 100px;
     height: 400px;
-    border: 2px solid black;
+    border: 3px solid black;
+    position: relative;
+}
+
+.textVert {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 #col1 {
@@ -366,20 +371,28 @@ a.disabledLink {
 #rack01 {
     width: 100px;
     height: 200px;
-    border: 2px solid black;
+    border-bottom: 3px solid black;
+    border-right: 3px solid black;
+    position: relative;
 }
 
 #rack02 {
     width: 100px;
     height: 200px;
-    border: 2px solid black;
+    border-top: 3px solid black;
+    border-bottom: 3px solid black;
+    border-right: 3px solid black;
+    position: relative;
 }
 
 #rack03 {
     margin-top: 100px;
     width: 100px;
     height: 200px;
-    border: 2px solid black;
+    border-top: 3px solid black;
+    border-bottom: 3px solid black;
+    border-left: 3px solid black;
+    position: relative;
 }
 
 #col2 {
@@ -398,7 +411,8 @@ a.disabledLink {
 #rack11, #rack10 {
     width: 400px;
     height: 100px;
-    border: 2px solid black;
+    border: 3px solid black;
+    position: relative;
 }
 
 .inline {
@@ -408,32 +422,36 @@ a.disabledLink {
 #rack04, #rack05, #rack06, #rack07 {
     width: 200px;
     height: 100px;
-    border: 2px solid black;
+    border-bottom: 3px solid black;
+    border-right: 3px solid black;
+    position: relative;
 }
 
-/* .rack05 { */
-/*     width: 200px; */
-/*     height: 100px; */
-/*     border: 2px solid black; */
-/* } */
+#rack04, #rack06 {
+    border-left: 3px solid black;
+}
 
 #col4 {
     margin-top: 100px;
     width: 200px;
     height: 200px;
-    /* border: 1px solid green; */
 }
 
 #rack08 {
     width: 200px;
     height: 100px;
-    border: 2px solid black;
+    border-bottom: 3px solid black;
+    border-right: 3px solid black;
+    position: relative;
 }
 
 #rack09 {
     width: 200px;
     height: 100px;
-    border: 2px solid black;
+    border-top: 3px solid black;
+    border-bottom: 3px solid black;
+    border-right: 3px solid black;
+    position: relative;
 }
 
 /* ---------------------------------------------------
