updated navbase turning on some links

--- a/templates/navbase.html
+++ b/templates/navbase.html
@@ -30,7 +30,7 @@
                             <a href="http://10.0.1.78/monarch_jobdisplay">Display List</a>
                         </li>
                         <li>
-                            <a href="#" class="disabledLink">Directory</a>
+                            <a href="http://10.0.1.51:5000/directory">Directory</a>
                         </li>
                         <li>
                             <a href="http://10.0.1.51:5000/invhome">Inventory</a>
@@ -68,7 +68,7 @@
                             <a href="http://10.0.1.51:5000/nest">Nesting</a>
                         </li>
                         <li>
-                            <a href="#" class="disabledLink">Tap Chart</a>
+                            <a href="http://10.0.1.51:5000/taps">Tap Chart</a>
                         </li>
                     </ul>
                 </li>
