turned on hardware in navbar

--- a/templates/navbase.html
+++ b/templates/navbase.html
@@ -59,7 +59,7 @@
                             <a href="http://10.0.1.51:5000/bdhome">Bend Deduction</a>
                         </li>
                         <li>
-                            <a href="#" class="disabledLink">Hardware</a>
+                            <a href="http://10.0.1.51:5000/hardware">Hardware</a>
                         </li>
                         <li>
                             <a href="http://10.0.1.51:5000/machhome">Machining</a>
